--- a/gallery.html
+++ b/gallery.html
@@ -469,11 +469,11 @@
                   <circle cx="12" cy="10" r="3"></circle>
                 </svg>
                 <div>
-                  <h4>GOVERNMENT POLYTECHNIC SANTKABIRNAGAR</h4>
+                  <h4>GOVERNMENT POLYTECHNIC BAIJPUR BHITI</h4>
                   <div>
                     <p>
                       <strong
-                        >Sirsi Khas, Sirsi, Sant Kabir Nagar - 272165</strong
+                        >Baijpur Bhiti, Ambedkarnagar - 224152</strong
                       >
                     </p>
                   </div>
@@ -494,7 +494,7 @@
                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
                   ></path>
                 </svg>
-                <p>0551-2500125</p>
+                <p>05273-252012</p>
               </div>
 
               <div class="contact-item">
@@ -512,7 +512,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>govtpolysirsi@yahoo.com</p>
+                <p>gpbaijpur@gmail.com</p>
               </div>
             </div>
           </div>
@@ -533,7 +533,7 @@
             <h3>REACH OUT HERE</h3>
             <div class="map-container">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3448.6649619567265!2d83.092693!3d26.535950799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3991171d09c060b3%3A0xe32480a8d23a7063!2sGovt%20polytechnic%20Santkabir%20Nagar!5e1!3m2!1sen!2sin!4v1746283209388!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3569.104350280125!2d82.693415!3d26.4665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3990d9a8b7b8e7a1%3A0x9c9a9c9a9c9a9c9a!2sGovernment%20Polytechnic%20Baijpur%20Bhiti!5e0!3m2!1sen!2sin!4v1620000000000!5m2!1sen!2sin"
                 width="100%"
                 height="450"
                 style="border: 0"
@@ -549,7 +549,7 @@
         <div class="footer-bottom">
           <div class="copyright">
             <p>
-              Copyright &copy; 2025 Government Polytechnic SANTKABIRNAGAR. All
+              Copyright &copy; 2025 Government Polytechnic Baijpur Bhiti. All
               Rights Reserved.
             </p>
           </div>
@@ -571,22 +571,22 @@
           // Folder to images mapping (replace with your actual folder paths)
           const folderImages = {
             all: [
-              { src: "images/GoGreen/G1.jpeg", caption: "Main Building Entrance" },
-              { src: "images/Events/E1.jpg", caption: "Annual Day Celebration" },
-              { src: "images/facilities/computer lab.jpeg", caption: "Computer Lab" },
-              { src: "images/facilities/classes.jpeg", caption: "Industry Workshop" }
+              { src: "", caption: "Main Building Entrance" },
+              { src: "", caption: "Annual Day Celebration" },
+              { src: "", caption: "Computer Lab" },
+              { src: "", caption: "Industry Workshop" }
             ],
             campus: [
-              { src: "images/GoGreen/G1.jpeg", caption: "Main Building Entrance" }
+              { src: "", caption: "Main Building Entrance" }
             ],
             events: [
-              { src: "images/Events/E1.jpg", caption: "Annual Day Celebration" }
+              { src: "", caption: "Annual Day Celebration" }
             ],
             labs: [
-              { src: "images/facilities/computer lab.jpeg", caption: "Computer Lab" }
+              { src: "", caption: "Computer Lab" }
             ],
             workshops: [
-              { src: "images/facilities/classes.jpeg", caption: "Industry Workshop" }
+              { src: "", caption: "Industry Workshop" }
             ]
           };
       
