some changes done

--- a/mechanical.html
+++ b/mechanical.html
@@ -246,16 +246,20 @@
       </div>
 
       <div class="department-tabs">
-        <button class="dept-tab" data-dept="civil">Civil Engineering</button>
+        <button class="dept-tab " data-dept="civil">
+          Civil Engineering
+        </button>
         <button class="dept-tab active" data-dept="mechanical">
           Mechanical Engineering(Production)
         </button>
-        <button class="dept-tab" data-dept="textile">Electrical Engineering</button>
+        <button class="dept-tab" data-dept="textile">
+          Electrical Engineering
+        </button>
       </div>
 
       <div class="faculty-container">
         <!-- Civil Engineering Faculty -->
-        <div class="faculty-pane" id="civil">
+        <div class="faculty-pane " id="civil">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
@@ -266,14 +270,14 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Dr. Rajesh Sharma</h3>
-                <p class="faculty-designation">Professor & HOD</p>
+                <h3>Mr. Amit Singh</h3>
+                <p class="faculty-designation">Lecturer Civil</p>
                 <p class="faculty-qualification">
-                  Ph.D. in Structural Engineering
+                  MTech in Environmental Engineering
                 </p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> rajesh.sharma@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 98765 43210</p>
+                  <p><strong>Email:</strong> 14108amit@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9140263126</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac001">
                   View Profile
@@ -290,14 +294,12 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Prof. Anuj Pal</h3>
-                <p class="faculty-designation">Lecturer</p>
-                <p class="faculty-qualification">
-                  M.Tech in Geotechnical Engineering
-                </p>
+                <h3>Mr. Satyendra Pratap Singh</h3>
+                <p class="faculty-designation">Lecturer Civil</p>
+                <p class="faculty-qualification">B.TECH</p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> anuj.pal@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 87654 32109</p>
+                  <p><strong>Email:</strong>Satyendra110@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7985704038</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac002">
                   View Profile
@@ -314,14 +316,14 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Prof. Ralesh Kumar Rahi</h3>
-                <p class="faculty-designation">Lecturer</p>
+                <h3>Mrs. Sonalika Maurya</h3>
+                <p class="faculty-designation">Lecturer Civil</p>
                 <p class="faculty-qualification">
-                  M.Tech in Transportation Engineering
+                  M.tech (Transportation engineering)
                 </p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> ralesh.rahi@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 76543 21098</p>
+                  <p><strong>Email:</strong>sonalikamauryagov@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7210652128</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac003">
                   View Profile
@@ -343,14 +345,12 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Dr. Vikram Singh</h3>
-                <p class="faculty-designation">Professor & HOD</p>
-                <p class="faculty-qualification">
-                  Ph.D. in Thermal Engineering
-                </p>
+                <h3>Mr. Abdullah Ansari</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">BE(Mechanical Engineeeing)</p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> vikram.singh@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 98765 43211</p>
+                  <p><strong>Email:</strong> 2255abdullahalig@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7275343235</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -367,14 +367,123 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Prof. Priyansha Kushwaha</h3>
-                <p class="faculty-designation">Lecturer</p>
+                <h3>Mr. Mohd Ahamad</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">M.Tech</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> meet.ahamad@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9958470800</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <!-- faculty card 3-->
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Ashutosh Kumar</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">BTech</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 6388458630</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Anand Mishra</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
                 <p class="faculty-qualification">
-                  M.Tech in Production Engineering
+                  Btech in Mechanical Engineering
                 </p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> priyansha.k@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 87654 32110</p>
+                  <p><strong>Email:</strong> anandm468@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7985055390</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Atul Tiwari</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">
+                  Btech in Mechanical Engineering
+                </p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> tiwariatul392@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7530972922</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Ashutosh Kumar</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">BTech</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 6388458630</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Amarnath chauhan</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">M Tech</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> amarnathchauhan497@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7859859003</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -384,7 +493,7 @@
           </div>
         </div>
 
-        <!-- Textile Engineering Faculty -->
+        <!-- Electrical Engineering Faculty -->
         <div class="faculty-pane" id="textile">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
@@ -396,14 +505,12 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Dr. Vikram Singh</h3>
-                <p class="faculty-designation">Professor & HOD</p>
-                <p class="faculty-qualification">
-                  Ph.D. in Thermal Engineering
-                </p>
+                <h3>Mr. Rakesh kumar rai</h3>
+                <p class="faculty-designation">Lecturer Electrical</p>
+                <p class="faculty-qualification">B. E.</p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> vikram.singh@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 98765 43211</p>
+                  <p><strong>Email:</strong> rakesh29993@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9340106433</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -420,14 +527,54 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Prof. Priyansha Kushwaha</h3>
-                <p class="faculty-designation">Lecturer</p>
-                <p class="faculty-qualification">
-                  M.Tech in Production Engineering
-                </p>
+                <h3>Mr. Ambrish Pal</h3>
+                <p class="faculty-designation">Lecturer Electrical</p>
+                <p class="faculty-qualification">Btech</p>
                 <div class="faculty-contact">
-                  <p><strong>Email:</strong> priyansha.k@gpbhitti.edu.in</p>
-                  <p><strong>Phone:</strong> +91 87654 32110</p>
+                  <p><strong>Email:</strong> ambrishpal7@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7987757504</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Rakesh</h3>
+                <p class="faculty-designation">Lecturer Electrical</p>
+                <p class="faculty-qualification">M.Tech.</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> rakeshmkr720042@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 7839237042</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Mohammad Tufail</h3>
+                <p class="faculty-designation">Lecturer Electrical</p>
+                <p class="faculty-qualification">M.TECH</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> tufailee@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9889383900</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
