some changes done

--- a/applied.html
+++ b/applied.html
@@ -180,16 +180,8 @@
           <li>
             <a href="#">AICTE</a>
             <div class="dropdown-content">
-              <a
-                target="_blank"
-                href="https://www.aicte-india.org/bureaus/approval/approval-process-2025-26"
-                >Approvals</a
-              >
-              <a
-                target="_blank"
-                href="https://aicte-india.org/bureaus/administration/rules-regulations"
-                >Guidelines</a
-              >
+              <a target="_blank" href="https://www.aicte-india.org/bureaus/approval/approval-process-2025-26">Approvals</a>
+              <a target="_blank" href="https://aicte-india.org/bureaus/administration/rules-regulations">Guidelines</a>
               <!-- <a href="#">Mandatory Disclosures</a> -->
             </div>
           </li>
@@ -213,9 +205,9 @@
           <li>
             <a href="#">Departments</a>
             <div class="dropdown-content">
-              <a href="/civil.html">Civil Engineering</a>
-              <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
-              <a href="/electical.html">Electrical Engineering</a>
+                <a href="/civil.html">Civil Engineering</a>
+                <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
+                <a href="/electical.html">Electrical Engineering</a>
             </div>
           </li>
           <li>
@@ -235,15 +227,14 @@
             </div>
           </li>
           <li><a href="#">Alumni</a></li>
-          <li>
-            <a href="#">Contact us</a>
+          <li><a href="#">Contact us</a>
             <div class="dropdown-content">
-              <a href="/address.html">Address</a>
-              <a href="/mapLocation.html">Maps & Location</a>
-              <a href="/phoneDirectory.html">Phone Directory</a>
-              <a href="/feedback.html">Feedback/Query</a>
-            </div>
-          </li>
+                <a href="/address.html">Address</a>
+                <a href="/mapLocation.html">Maps & Location</a>
+                <a href="/phoneDirectory.html">Phone Directory</a>
+                <a href="/feedback.html">Feedback/Query</a>
+              </div>
+        </li>
         </ul>
       </div>
     </section>
@@ -255,7 +246,7 @@
       </div>
 
       <div class="department-tabs">
-        <button class="dept-tab active" data-dept="civil">
+        <button class="dept-tab " data-dept="civil">
           Civil Engineering
         </button>
         <button class="dept-tab" data-dept="mechanical">
@@ -264,14 +255,14 @@
         <button class="dept-tab" data-dept="textile">
           Electrical Engineering
         </button>
-        <button class="dept-tab" data-dept="applied">
+        <button class="dept-tab active" data-dept="textile">
           Applied Department
         </button>
       </div>
 
       <div class="faculty-container">
         <!-- Civil Engineering Faculty -->
-        <div class="faculty-pane active" id="civil">
+        <div class="faculty-pane " id="civil">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
@@ -596,7 +587,7 @@
           </div>
         </div>
 
-                <!-- Applied Department Faculty -->
+        <!-- Applied Department Faculty -->
 
         <div class="faculty-pane active" id="textile">
           <div class="faculty-grid">
@@ -696,7 +687,9 @@
                   <h4>GOVERNMENT POLYTECHNIC BAIJPUR BHITI</h4>
                   <div>
                     <p>
-                      <strong>Baijpur Bhiti, Ambedkarnagar - 224152</strong>
+                      <strong
+                        >Baijpur Bhiti, Ambedkarnagar - 224152</strong
+                      >
                     </p>
                   </div>
                 </div>
