--- a/electical.html
+++ b/electical.html
@@ -255,6 +255,9 @@
         <button class="dept-tab active" data-dept="textile">
           Electrical Engineering
         </button>
+        <button class="dept-tab" data-dept="textile">
+          Applied Department
+        </button>
       </div>
 
       <div class="faculty-container">
@@ -575,6 +578,77 @@
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tufailee@gmail.com</p>
                   <p><strong>Phone:</strong> +91 9889383900</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+                <!-- Applied Department Faculty -->
+
+        <div class="faculty-pane active" id="textile">
+          <div class="faculty-grid">
+            <!-- Faculty Card 1 -->
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mrs. Awani kumari</h3>
+                <p class="faculty-designation">Lecturer Chemistry</p>
+                <p class="faculty-qualification">MSc , NET</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> awanisln1991@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9450731629</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac101">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <!-- Faculty Card 2 -->
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Manoj Kumar Jaiswal</h3>
+                <p class="faculty-designation">Lecturer Physics</p>
+                <p class="faculty-qualification">M.Sc. , Ph.D , NET</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> manojau.87@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9452535325</p>
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/placeholder-profile.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Ritesh Kumar Vishwakarma</h3>
+                <p class="faculty-designation">Lecturer Communication</p>
+                <p class="faculty-qualification">M.A.</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> riteshsmith1@gmail.com</p>
+                  <p><strong>Phone:</strong> +91 9336814849</p>
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
