some changes done

--- a/civil.html
+++ b/civil.html
@@ -598,7 +598,7 @@
 
                 <!-- Applied Department Faculty -->
 
-        <div class="faculty-pane active" id="textile">
+        <div class="faculty-pane" id="textile">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
