some changes done

--- a/civil.html
+++ b/civil.html
@@ -596,9 +596,9 @@
           </div>
         </div>
 
-                <!-- Applied Department Faculty -->
+        <!-- Applied Department Faculty -->
 
-        <div class="faculty-pane" id="textile">
+        <div class="faculty-pane" id="applied">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
