--- a/applied.html
+++ b/applied.html
@@ -255,7 +255,7 @@
         <button class="dept-tab" data-dept="textile">
           Electrical Engineering
         </button>
-        <button class="dept-tab active" data-dept="textile">
+        <button class="dept-tab active" data-dept="applied">
           Applied Department
         </button>
       </div>
@@ -589,7 +589,7 @@
 
         <!-- Applied Department Faculty -->
 
-        <div class="faculty-pane active" id="textile">
+        <div class="faculty-pane active" id="applied">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
