--- a/mechanical.html
+++ b/mechanical.html
@@ -255,7 +255,7 @@
         <button class="dept-tab" data-dept="textile">
           Electrical Engineering
         </button>
-        <button class="dept-tab" data-dept="textile">
+        <button class="dept-tab" data-dept="applied">
           Applied Department
         </button>
       </div>
@@ -590,7 +590,7 @@
 
                 <!-- Applied Department Faculty -->
 
-        <div class="faculty-pane" id="textile">
+        <div class="faculty-pane" id="applied">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
