--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
               <a href="/civil.html">Civil Engineering</a>
               <a href="/mechanical.html">Mechanical Engineering</a>
               <a href="/electrical.html">Electrical Engineering</a>
+              <a href="/applied.html">Applied Department</a>
             </div>
           </li>
           <li>
