--- a/syllabus.html
+++ b/syllabus.html
@@ -221,6 +221,7 @@
               <a href="/civil.html">Civil Engineering</a>
               <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
               <a href="/electical.html">Electrical Engineering</a>
+              <a href="/applied.html">Applied Department</a>
               <!-- <a href="#">Computer Science</a> -->
             </div>
           </li>
