--- a/feeStructure.html
+++ b/feeStructure.html
@@ -210,6 +210,7 @@
               <a href="/civil.html">Civil Engineering</a>
               <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
               <a href="/electical.html">Electrical Engineering</a>
+              <a href="/applied.html">Applied Department</a>
             </div>
           </li>
           <li>
