--- a/civil.html
+++ b/civil.html
@@ -605,7 +605,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/awani.png"
                   alt="Faculty Member"
                 />
               </div>
@@ -627,7 +627,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/manojkumar.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -648,7 +648,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/riteshvishwakarma.jpg"
                   alt="Faculty Member"
                 />
               </div>
