--- a/mechanical.html
+++ b/mechanical.html
@@ -597,7 +597,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/awani.png"
                   alt="Faculty Member"
                 />
               </div>
@@ -619,7 +619,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/manojkumar.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -640,7 +640,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/riteshvishwakarma.jpg"
                   alt="Faculty Member"
                 />
               </div>
