--- a/electical.html
+++ b/electical.html
@@ -596,7 +596,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/awani.png"
                   alt="Faculty Member"
                 />
               </div>
@@ -618,7 +618,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/manojkumar.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -639,7 +639,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/applied/riteshvishwakarma.jpg"
                   alt="Faculty Member"
                 />
               </div>
