--- a/civil.html
+++ b/civil.html
@@ -278,7 +278,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/civil/amitsingh.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -302,7 +302,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/civil/sateyendra.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -324,7 +324,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/civil/sonalikamaurya.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -353,7 +353,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/abdullah.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -398,7 +398,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/ashutosh.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -419,7 +419,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/anandmishra.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -442,7 +442,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/atultiwari.png"
                   alt="Faculty Member"
                 />
               </div>
@@ -465,7 +465,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/ashutosh.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -486,7 +486,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/amarnathchauhan.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -513,7 +513,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/rakeshrai.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -535,7 +535,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/ambrishpal.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -556,7 +556,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/"
                   alt="Faculty Member"
                 />
               </div>
@@ -577,7 +577,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/mohammadtufail.jpg"
                   alt="Faculty Member"
                 />
               </div>
