--- a/mechanical.html
+++ b/mechanical.html
@@ -269,7 +269,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/civil/amitsingh.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -293,7 +293,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/civil/sateyendra.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -315,7 +315,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/civil/sonalikamaurya.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -344,7 +344,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/abdullah.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -366,7 +366,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/"
                   alt="Faculty Member"
                 />
               </div>
@@ -389,7 +389,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/ashutosh.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -410,7 +410,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/anandmishra.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -433,7 +433,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/atultiwari.png"
                   alt="Faculty Member"
                 />
               </div>
@@ -456,7 +456,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/ashutosh.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -477,7 +477,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/mechanical/amarnathchauhan.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -504,7 +504,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/rakeshrai.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -526,7 +526,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/ambrishpal.jpg"
                   alt="Faculty Member"
                 />
               </div>
@@ -547,7 +547,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/"
                   alt="Faculty Member"
                 />
               </div>
@@ -568,7 +568,7 @@
             <div class="faculty-card">
               <div class="faculty-image">
                 <img
-                  src="images/placeholder-profile.jpg"
+                  src="images/electrical/mohammadtufail.jpg"
                   alt="Faculty Member"
                 />
               </div>
