--- a/phoneDirectory.html
+++ b/phoneDirectory.html
@@ -321,27 +321,27 @@
                     <tbody>
                       <tr>
                         <td>Principal</td>
-                        <td>Dr. A. K. Sharma</td>
-                        <td>05273-000123</td>
-                        <td>principal@gpbaijpur.ac.in</td>
+                        <td>Mr. Suresh Kumar Basant</td>
+                        <td>Not Available</td>
+                        <td>Not Available</td>
                       </tr>
                       <tr>
-                        <td>Administrative Office</td>
-                        <td>Office Staff</td>
-                        <td>05273-000124</td>
-                        <td>office@gpbaijpur.ac.in</td>
+                        <td>Lecturer Electrical</td>
+                        <td>Rakesh kumar rai</td>
+                        <td>9340106433</td>
+                        <td>rakesh29993@gmail.com</td>
                       </tr>
                       <tr>
-                        <td>Admission Cell</td>
-                        <td>Admission Incharge</td>
-                        <td>05273-000125</td>
-                        <td>admission@gpbaijpur.ac.in</td>
+                        <td>Lecturer Civil</td>
+                        <td>Amit Singh</td>
+                        <td>9140263126</td>
+                        <td>14108amit@gmail.com</td>
                       </tr>
                       <tr>
-                        <td>Civil Engineering HOD</td>
-                        <td>Prof. R. K. Verma</td>
-                        <td>05273-000126</td>
-                        <td>civilhod@gpbaijpur.ac.in</td>
+                        <td>Lecturer Mechanical</td>
+                        <td>Abdullah Ansari</td>
+                        <td>7275343235</td>
+                        <td>2255abdullahalig@gmail.com</td>
                       </tr>
                     </tbody>
                   </table>
