--- a/academicInfra.html
+++ b/academicInfra.html
@@ -462,7 +462,6 @@
 
             <div class="facility-gallery">
               <!-- Boys Hostel -->
-              <div class="facility-card">
                 <div class="facility-image">
                   <img
                     src=""
@@ -487,7 +486,7 @@
                     <li>Regular cleaning and maintenance</li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Girls Hostel -->
               <div class="facility-card">
