--- a/index.html
+++ b/index.html
@@ -425,9 +425,14 @@
           <h3>NOTICE BOARD</h3>
           <a href="#" class="view-all">VIEW ALL NOTICE</a>
         </div>
-        <div class="notice-content">
-          <p class="no-notice">No notices available at the moment.</p>
-        </div>
+<div class="notice-content" style="width: 100%; height: 500px; overflow: hidden;">
+  <iframe 
+    src="notice.pdf"
+    style="width: 100%; height: 100%; border: none; overflow: hidden;" 
+    scrolling="no">
+  </iframe>
+</div>
+
       </div>
     </div>
 
